# lets_make_a_synth

./: .gitignore  CMakeLists.txt  README.md
cmake/: CxxFlags.cmake
dependencies/nanovg/: CMakeLists.txt
part1_make_a_sound/: CMakeLists.txt  README.md  main.cpp
part1_make_a_sound/demo/: index.html
part1_make_a_sound/scripts/: sine_stem_plot.py
part2_oscillators/: CMakeLists.txt  README.md  main.cpp
part2_oscillators/demo/: build_wasm.sh  index.html
part2_oscillators/scripts/: plot.py
part3_ui/: CMakeLists.txt  README.md  audio.cpp  audio.h  constants.h  input.cpp  input.h  main.cpp  oscillator.cpp  oscillator.h  sdlwrapper.cpp  sdlwrapper.h  synth.h  ui.cpp  ui.h  utility.cpp  utility.h
part3_ui/demo/: .gitignore  build_wasm.sh  index.html
src/: main.cpp
